@@ -10,6 +10,28 @@
 #include <codecvt> //char code converter for Windows system
 #endif
 
+//TextCtrl that can show a message when its text box is empty.
+class FocusedTextCtrl : public wxTextCtrl {
+private:
+	wxString emptyMessage;
+	wxString actualValue;
+public:
+	FocusedTextCtrl(wxWindow* parent, wxWindowID id,
+		const wxString& value = wxEmptyString,
+		const wxString& empty_message = wxEmptyString,
+		const wxPoint& pos = wxDefaultPosition,
+		const wxSize& size = wxDefaultSize,
+		long style = 0,
+		const wxValidator& validator = wxDefaultValidator,
+		const wxString& name = wxTextCtrlNameStr);
+	virtual ~FocusedTextCtrl() {}
+
+	void OnSetFocus(wxFocusEvent& event);
+	void OnKillFocus(wxFocusEvent& event);
+	void SetEmptyMessage();
+	DECLARE_EVENT_TABLE();
+};
+
 //Drop target for path picker
 template <typename T>
 class DropFilePath : public wxFileDropTarget
